--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<h1>hello flexbox</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="top">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+
+      <div class="middle-left">
+        <div class="center-box"></div>
+      </div>
+
+      <div class="middle-right">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+  </body>
+</html>
