--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
         <div></div>
         <div></div>
       </div>
-
+      <div class="middle">
       <div class="middle-left">
         <div class="center-box"></div>
       </div>
-
+      
       <div class="middle-right">
         <div></div>
         <div></div>
         <div></div>
         <div></div>
       </div>
+     </div>
     </div>
   </body>
 </html>
